@@ -2,6 +2,8 @@ Revision history for perl module Routes::Tiny
 
 {{$NEXT}}
 
+ - strict_case option added (Dmitry Smal)
+
 0.2 2017-07-09T20:05:02Z
 
  - method sugar for pattern building (Alexander Batyrshin)
